--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -32,16 +32,16 @@
       </div>
 
       <div class="set-12 btnhldr">
-        <button type="button" (click)="popComplaintsDialog()">
+        <button type="button" mat-raised-button color="primary" class="wicon" (click)="popComplaintsDialog()">
           <mat-icon>priority_high</mat-icon>
-          <span>Denunciar</span>
+          <small>Denunciar</small>
         </button>
       </div>
 
       <div class="set-12 btnhldr">
-        <button type="button" (click)="popTestimonialsDialog()">
+        <button type="button" mat-raised-button color="primary" class="wicon" (click)="popTestimonialsDialog()">
           <mat-icon>edit_note</mat-icon>
-          <span>Mi Testimonio</span>
+          <small>Mi Testimonio</small>
         </button>
       </div>
     </div>
