--- a/src/app/complaints/complaints.component.html
+++ b/src/app/complaints/complaints.component.html
@@ -86,6 +86,27 @@
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="coverage">
+        <th mat-header-cell *matHeaderCellDef>Cobertura</th>
+        <td mat-cell *matCellDef="let element">
+          <span *ngIf="element['relation'] != null">
+            <small *ngIf="element['relation'] == 'topic'">
+              <span *ngIf="element['topic'] != undefined">
+                {{element['topic']['coverage'][0]['name']}}
+              </span>
+            </small>
+            <small *ngIf="element['relation'] == 'solution'">
+              <span *ngIf="element['solution'] != undefined">
+                {{element['solution']['coverage'][0]['name']}}
+              </span>
+            </small>
+          </span>
+          <span *ngIf="element['relation'] == null">
+            <small>Sin cobertura</small>
+          </span>
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef>Alta</th>
         <td mat-cell *matCellDef="let element">
