--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -55,7 +55,7 @@
   </div>
 
   <div class="set-12 videohldr">
-    <iframe width="854" height="480" src="https://www.youtube.com/embed/playlist?list=PLr9dpLsLmzgrzqB_T4SOOEaXFmd6Q93_X" frameborder="0"
+    <iframe width="854" height="480" src="https://www.youtube.com/embed/oADWKZ5I3pA" frameborder="0"
       allowfullscreen></iframe>
   </div>
 
