--- a/src/app/components/add-document-theme/add-document-theme.component.html
+++ b/src/app/components/add-document-theme/add-document-theme.component.html
@@ -26,7 +26,7 @@
           <mat-form-field appearance="outline">
             <mat-label>Cobertura</mat-label>
             <mat-select (selectionChange)="onCoverageSelected($event)" formControlName="coverage">
-              <mat-option *ngFor="let state of coverage" [value]="state.id">
+              <mat-option *ngFor="let state of coverage" [value]="state._id">
                 <small>{{state?.name}}</small>
               </mat-option>
             </mat-select>
