--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -19,9 +19,25 @@
     padding: 40px 20px;
     float: left;
     position: fixed;
+    top: 80px;
+    left: 0;
+
+    mat-card {
+      padding: 20px;
+    }
 
     .btnhldr {
-      margin-top: 5px;
+      button {
+        width: 100%;
+      }
+    }
+
+    .btnhldr:nth-child(odd) {
+      padding-right: 5px;
+    }
+
+    .btnhldr:nth-child(even) {
+      padding-left: 5px;
     }
   }
 
@@ -31,6 +47,27 @@
     margin-left: 30%;
     padding: 40px 0;
     float: left;
+
+    .tpctrls {
+      margin-bottom: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+
+      * {
+        margin: 0
+      }
+
+      button {
+        zoom: 0.7;
+        margin-right: 10px;
+      }
+
+      span {
+        font-weight: bold;
+        font-size: 13pt;
+      }
+    }
   }
 
   .crdh {
@@ -274,11 +311,15 @@
 
   .filters {
     form {
+      float: left;
       width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      margin-bottom: 10px;
+      // display: flex;
+      // align-items: center;
+      // justify-content: flex-start;
+      // margin-bottom: 10px;
+      border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
+      padding-bottom: 20px;
+      margin-bottom: 20px;
 
       * {
         margin: 0;
@@ -286,15 +327,27 @@
     }
 
     div {
-      width: 50%;
+      width: 100%;
+      float: left;
     }
 
-    div:nth-child(odd) {
-      padding-right: 10px;
+    div:not(:first-child) {
+      margin-top: 10px;
     }
 
-    div:nth-child(even) {
-      padding-left: 10px;
+    .ctrls {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      margin-top: 20px !important;
+
+      * {
+        margin: 0;
+      }
+
+      mat-spinner {
+        margin-left: 20px;
+      }
     }
 
     ::ng-deep .mat-form-field-appearance-outline .mat-form-field-wrapper {
