--- a/src/app/public-documents/solution/solution.component.scss
+++ b/src/app/public-documents/solution/solution.component.scss
@@ -258,6 +258,50 @@
     }
   }
 
+  .table-head {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+
+    // .set-6:nth-child(odd) {
+    //   padding-right: 10px;
+    // }
+
+    .head-add {
+      button {
+        display: flex;
+        align-items: center;
+        position: absolute;
+        z-index: 11;
+      }
+    }
+
+    .set-6:nth-child(even) {
+      padding-left: 20px;
+    }
+
+    * {
+      margin: 0;
+    }
+
+    p.title {
+      margin-right: 70px;
+      font-size: 16px;
+    }
+
+    ::ng-deep .mat-form-field-wrapper {
+      padding-bottom: 0 !important;
+    }
+
+    .set-2 {
+      button {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+  }
+
   table {
     width: 100%;
     box-shadow: none !important;
@@ -441,6 +485,71 @@
     color: white;
   }
 
+  .cmtlst {
+    padding-top: 20px;
+
+    .com {
+      padding: 10px 0;
+      border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
+    }
+
+    .com:last-child {
+      padding-bottom: 0 !important;
+      border-bottom: none;
+    }
+
+    .avatar {
+      width: 50px;
+      height: 50px;
+      border-radius: 100%;
+      overflow: hidden;
+      background: #000000;
+      margin: 0;
+      color: #f1f1f1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 11pt;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .mess {
+      font-size: 11pt;
+    }
+
+    .dates {
+      font-style: italic;
+      color: rgba($color: #000000, $alpha: 0.4);
+      font-size: 10pt;
+      margin-top: 5px;
+    }
+
+    .mess {
+      text-align: justify;
+    }
+
+    &.nocom {
+      text-align: center;
+
+      h4 {
+        margin-bottom: 5px;
+      }
+
+      p {
+        margin-bottom: 10px;
+      }
+
+      button {
+        margin: auto !important;
+      }
+    }
+  }
+
   .loading {
     mat-spinner {
       position: absolute;
@@ -456,6 +565,56 @@
     mat-icon {
       font-size: 14pt !important;
       color: #fff;
+    }
+  }
+
+  .coms {
+    padding: 20px;
+    .btns {
+      display: inline-flex;
+      justify-content: flex-end;
+      font-size: 11pt;
+
+      * {
+        margin: 0;
+      }
+
+      a {
+        margin-left: 10px !important;
+      }
+    }
+  }
+
+  .sltshldr {
+    .slt {
+      padding-bottom: 10px;
+      margin-bottom: 10px;
+      border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
+
+      button {
+        text-align: left;
+        transition: all .2s linear;
+      }
+
+      button:hover {
+        color: #1e7e7f;
+      }
+    }
+
+    &.nocom {
+      text-align: center;
+
+      h4 {
+        margin-bottom: 5px;
+      }
+
+      p {
+        margin-bottom: 10px;
+      }
+
+      button {
+        margin: auto !important;
+      }
     }
   }
 }
