--- a/src/app/public-documents/components/solutions-card/solutions-card.component.scss
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.scss
@@ -115,7 +115,8 @@
         }
 
         a {
-          margin-left: 10px !important;
+          // margin-left: 10px !important;
+          color: #1e7e7f;
         }
       }
     }
