--- a/src/app/public-documents/solution/solution.component.scss
+++ b/src/app/public-documents/solution/solution.component.scss
@@ -24,7 +24,7 @@
       width: 60%;
       padding: 20px;
 
-      h3 {
+      p {
         margin-bottom: 15px;
       }
     }
@@ -52,7 +52,7 @@
 
       mat-icon {
         font-size: 11pt;
-        color: #ffffff;
+        // color: #ffffff;
       }
     }
   }
@@ -493,6 +493,10 @@
       border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
     }
 
+    .com:first-child {
+      padding-top: 0;
+    }
+
     .com:last-child {
       padding-bottom: 0 !important;
       border-bottom: none;
@@ -550,6 +554,51 @@
     }
   }
 
+  .combox {
+    margin-bottom: 20px;
+    padding-top: 20px;
+
+    p {
+      color: #1e7e7f;
+      margin-bottom: 5px;
+      font-weight: bold;
+      font-size: 11pt;
+      font-style: italic;
+    }
+
+    textarea {
+      min-height: 40px;
+    }
+
+    .ctrls {
+      margin-top: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+
+      * {
+        margin: 0;
+      }
+
+      button {
+        margin-left: 10px;
+      }
+
+      mat-spinner {
+        margin-left: 20px;
+      }
+
+      .mini {
+        zoom: 0.7;
+      }
+    }
+
+    ::ng-deep .mat-form-field-wrapper {
+      padding-bottom: 0 !important;
+      margin: 0 !important;
+    }
+  }
+
   .loading {
     mat-spinner {
       position: absolute;
@@ -570,6 +619,7 @@
 
   .coms {
     padding: 20px;
+
     .btns {
       display: inline-flex;
       justify-content: flex-end;
@@ -614,6 +664,32 @@
 
       button {
         margin: auto !important;
+      }
+    }
+  }
+
+  .hdtls {
+    display: flex;
+    align-items: center;
+    padding: 20px 20px 0 20px;
+
+    ::ng-deep .mat-form-field-wrapper {
+      margin: 0 !important;
+      padding: 0 !important;
+    }
+
+    .btns {
+      display: inline-flex;
+      justify-content: flex-end;
+      font-size: 11pt;
+
+      * {
+        margin: 0;
+      }
+
+      a {
+        // margin-left: 10px !important;
+        color: #1e7e7f;
       }
     }
   }
