--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -64,6 +64,7 @@
 
           <div class="infohldr">
             <h3>{{ topic.title }}</h3>
+            <p><small><i>{{topic['coverage'][0]['name']}}</i></small></p>
             <expanded-text [text]="topic.description" [minLength]="300" [title]="topic.title"></expanded-text>
           </div>
 
@@ -87,19 +88,73 @@
               <mat-icon>share</mat-icon>
             </button>
 
-            <button type="button" mat-mini-fab color="warn" matTooltip="Agregar comentario" matTooltipClass="tooltip"
+            <!-- <button type="button" mat-mini-fab color="warn" matTooltip="Agregar comentario" matTooltipClass="tooltip"
               (click)="popAddCommentsDialog()">
               <mat-icon>forum</mat-icon>
-            </button>
+            </button> -->
           </div>
         </div>
 
         <div class="set-12 listhldr">
-          <solutions-card [data]="SolutionDataSource" [document]="document" [coverage]="coverage" [topic]="topic"
-            [coverageSelected]="coverageSelected" (sendSolutionData)="openModalSolution($event)"></solutions-card>
+          <!-- <solutions-card [data]="SolutionDataSource" [document]="document" [coverage]="coverage" [topic]="topic"
+            [coverageSelected]="coverageSelected" (sendSolutionData)="openModalSolution($event)"></solutions-card> -->
+          <div class="set-12 hdtls">
+            <div class="set-6">
+              <div class="set-6">
+                <mat-form-field appearance="outline">
+                  <mat-label>Agregar:</mat-label>
+                  <mat-select>
+                    <mat-option (click)="openModalTestimony($event)" disabled>
+                      <small>Testimonio</small>
+                    </mat-option>
+                    <mat-option (click)="popComplaintsDialog()" disabled>
+                      <small>Denuncia</small>
+                    </mat-option>
+                    <mat-option (click)="openModalSolution(null)">
+                      <small>Solución</small>
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </div>
+
+            <div class="set-6 btns">
+              <p>Explora más contenido en el <strong><a href="javascript:void(0)" (click)="popCitizensWall('')">Muro
+                    Ciudadano</a></strong></p>
+            </div>
+          </div>
         </div>
 
         <div class="set-12 cmtlst" *ngIf="topic['comments'].length > 0">
+          <div class="set-12 head-titles">
+            <span>Comentarios</span>
+            <div class="line"></div>
+          </div>
+
+          <div class="set-12 combox">
+            <p>Únete a la conversación</p>
+            <form [formGroup]="commentFormGroup" (submit)="onComment(commentFormGroup)">
+              <mat-form-field appearance="outline">
+                <mat-label><i>Escribe tu comentario</i></mat-label>
+                <textarea matInput cdkTextareaAutosize formControlName="message"></textarea>
+              </mat-form-field>
+
+              <div class="set-12 ctrls">
+                <input type="file" #file (change)="onFileSelected($event)">
+                <button type="button" mat-mini-fab color="warn" class="mini"
+                  [disabled]="commentFormGroup.invalid || isPosting" (click)="file.click()">
+                  <mat-icon>attach_file</mat-icon>
+                </button>
+                <button type="submit" mat-raised-button color="warn" class="wicon"
+                  [disabled]="commentFormGroup.invalid || isPosting">
+                  <mat-icon>save</mat-icon>
+                  <small>Comentar</small>
+                </button>
+                <mat-spinner diameter="30" *ngIf="isPosting"></mat-spinner>
+              </div>
+            </form>
+          </div>
+
           <div class="set-12 com" *ngFor="let com of topic['comments']">
             <div class="set-1">
               <div class="avatar">
@@ -116,7 +171,7 @@
                 *ngIf="com['truncate']"></div>
               <div class="set-12 mess" [innerHTML]="com['message']" *ngIf="!com['truncate']"></div>
 
-              <div class="set-12 dates txt-right" *ngIf="com['message'].length > 170">
+              <div class="set-12 rdmore txt-right" *ngIf="com['message'].length > 170">
                 <small>
                   <a href="javascript:void(0)" (click)="toggleCommentMessage(com)">
                     {{com['truncate'] ? 'Leer más' : 'Leer menos'}}
@@ -125,8 +180,13 @@
               </div>
 
               <div class="set-12 dates">
-                <small>{{com['createdBy']['firstname']}} {{com['createdBy']['lastname']}}</small> -
+                <small>{{com['createdBy']['firstname']}} {{com['createdBy']['lastname']}}</small>
+                <small>-</small>
                 <small>{{com['createdAt'] | date: 'mediumDate'}} - {{com['createdAt'] | date: 'mediumTime'}}</small>
+                <small *ngIf="com['attachment'] != null">-</small>
+                <button type="button" *ngIf="com['attachment'] != null">
+                  <mat-icon color="warn">attachment</mat-icon>
+                </button>
               </div>
 
               <!-- <div class="set-12 dates">
@@ -170,9 +230,16 @@
 
       <div class="set-12 sltshldr" *ngIf="solutionsData.length > 0">
         <div class="set-12 slt" *ngFor="let solution of solutionsData">
-          <button type="button" (click)="linkSolution(solution._id)">
-            {{solution['title']}}
-          </button>
+          <div class="set-10">
+            <button type="button" (click)="linkSolution(solution._id)">
+              <strong>{{solution['title']}}</strong>
+            </button>
+          </div>
+          <div class="set-2 txt-right">
+            <button type="button" mat-mini-fab color="primary">
+              {{solution['stats']['score']}}
+            </button>
+          </div>
         </div>
       </div>
 
